# SummonersWarAccountScore

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  config.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/Artifact/: CMakeLists.txt  artifact.cpp  artifact.hpp
src/Config/: CMakeLists.txt  config.cpp  config.hpp
src/File/: CMakeLists.txt  file.cpp  file.hpp
src/Monster/: CMakeLists.txt  monster.cpp  monster.hpp
src/Rune/: CMakeLists.txt  rune.cpp  rune.hpp
src/utils/: CMakeLists.txt  getMemberValue.cpp  getStat.cpp  maxMainStat.cpp  removeSpaces.cpp  utils.hpp
